# cpp_addons_template

./: CMakeLists.txt  README.md  package-lock.json  package.json  test.js
.cache/clangd/index/: test.cpp.38C3990DFE75F741.idx
src/: test.cpp
